--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div id="logging-info" class="span6">
                     <span id="user-info"></span>
-                    <a id="log-out" href="#" style="display: none">Cerrar sesión</a>
+                    <a id="log-out" href="#" style="display: none">Cerrar Sesión</a>
                 </div>
             </div>
             <div id="taskmenu" class="navbar">
